--- a/.golangci.yml
+++ b/.golangci.yml
@@ -22,11 +22,14 @@ linters-settings:
     ignore-decls:
       - T any
       - i int
+      - 't *testing.T'
+      - tb testing.TB
       - wg sync.WaitGroup
 linters:
   enable-all: true
   disable:
     - cyclop            # covered by gocyclo
+    - deadcode          # abandoned
     - exhaustivestruct  # replaced by exhaustruct
     - funlen            # rely on code review to limit function length
     - gocognit          # dubious "cognitive overhead" quantification
@@ -42,7 +45,9 @@ linters:
     - nlreturn          # generous whitespace violates house style
     - nosnakecase       # deprecated in https://github.com/golangci/golangci-lint/pull/3065
     - scopelint         # deprecated by author
+    - structcheck       # abandoned
     - testpackage       # internal tests are fine
+    - varcheck          # abandoned
     - wrapcheck         # don't _always_ need to wrap errors
     - wsl               # generous whitespace violates house style
 issues:
