--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -4,6 +4,6 @@ managed:
   go_package_prefix:
     default: github.com/bufbuild/connect-grpchealth-go/internal/gen/go
 plugins:
-  - name: go
+  - plugin: buf.build/protocolbuffers/go:v1.30.0
     out: internal/gen/go
     opt: paths=source_relative
