--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,7 +6,7 @@ linters-settings:
   exhaustruct:
     include:
       # No zero values for param structs.
-      - 'github\.com/bufbuild/connect-grpchealth-go\..*[pP]arams'
+      - 'connectrpc\.com/grpchealth\..*[pP]arams'
   forbidigo:
     forbid:
       - '^fmt\.Print'
