Update tools and simplify Makefile
Update the Buf CLI and `golangci-lint`, and simplify the Makefile:

- Set `GOBIN` and `PATH` once, so tool invocations are simpler.
- Use a newer version of `license-header`, eliminating `comm`.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -30,6 +30,7 @@ linters:
   disable:
     - cyclop            # covered by gocyclo
     - deadcode          # abandoned
+    - depguard          # unnecessary for small libraries
     - exhaustivestruct  # replaced by exhaustruct
     - funlen            # rely on code review to limit function length
     - gocognit          # dubious "cognitive overhead" quantification
