fix err113 config
Signed-off-by: Josh Humphries <2035234+jhump@users.noreply.github.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -28,7 +28,6 @@ linters:
   disable:
     - cyclop            # covered by gocyclo
     - depguard          # unnecessary for small libraries
-    - err113            # don't _always_ need to wrap errors
     - execinquery       # deprecated in golangci 1.58.0
     - funlen            # rely on code review to limit function length
     - gocognit          # dubious "cognitive overhead" quantification
@@ -50,4 +49,4 @@ issues:
   exclude:
     # Don't ban use of fmt.Errorf to create new errors, but the remaining
     # checks from err113 are useful.
-    - "err113: do not define dynamic errors.*"
+    - "do not define dynamic errors.*"
